--- a/style.css
+++ b/style.css
@@ -76,6 +76,51 @@
     padding: 5px;
     font-size: 24px;
     font-family: "Courier New";
+    position: relative;
+}
+
+#l1 { top: 5px; }
+#l2 { top: 33px; }
+#l3 { top: 61px; }
+#l4 { top: 89px; }
+#l5 { top: 117px; }
+#l6 { top: 145px; }
+#l7 { top: 173px; }
+#l8 { top: 201px; }
+
+.ist {
+    height: 28px;
+    position: absolute;
+}
+
+.tleft {
+    left: 5px;
+}
+
+.thalf {
+    left: 156px;
+}
+
+.tright {
+    right: 5px;
+}
+
+.colrev {
+    background-color: black;
+    color: white;
+}
+
+.displayNone {
+    display: none;
+}
+
+#lchan {
+    position: absolute;
+    left: 5px;
+    top: 33px;
+    font-size: 120px;
+    color: white;
+    background-color: black;
 }
 
 #fbutton {
@@ -119,7 +164,8 @@
     color: white;
     width: 60px;
     height: 60px;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 16px;
     font-weight: bold;
     cursor: pointer;
 }
@@ -163,16 +209,77 @@
     cursor: pointer;
 }
 
-#ptttext {
+#cont2 {
+    width: 1000px;
+    display: grid;
+    grid-template-columns: 550px 450px;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+#ptttextr {
     margin-top: 20px;
     width: 500px;
     padding: 5px;
     font-size: 20px;
     font-family: "Courier New";
+    grid-row: 1/2;
+    grid-column: 1/2;;
 }
 
 #container2 {
     margin-top: 20px;
     width: 500px;
     border: 2px solid black;
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+
+#problem {
+    grid-row: 1/3;
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+}
+
+#current {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    list-style: none;
+    align-items: center;
+}
+
+#current li {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+
+#announce {
+    padding: 5px;
+    height: 250px;
+    border: 2px solid black;
+}
+
+#nextbtn {
+    height: 50px;
+    border: 1px solid black;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.alerton {
+    animation: alertspeaker 0.5s infinite;
+}
+
+@keyframes alertspeaker {
+    from {
+        background-color: #666;
+    }
+    to {
+        background-color: yellow;
+    }
 }
